<resources>
    <string name="app_name">Teacher</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Добро пожаловать</string>
    <string name="sign_in_password_hint">Пароль</string>
    <string name="sign_in_login_hint">Почта</string>
    <string name="sign_in_title">Регистрация</string>
    <string name="sign_up_title">Вход</string>
    <string name="sign_in_name_hint">Имя</string>
    <string name="sign_in_surname_hint">Фамилия</string>
    <string name="sign_in_last_name_hint">Отчество</string>
    <string name="view_pager_profile">Профиль</string>
    <string name="view_pager_calendar">Занятия</string>
    <string name="view_pager_students">Ученики</string>
    <string name="view_pager_questions">Опросы</string>
    <string name="text_error">Отображение ошибки</string>
    <string name="button_error">Повторить</string>
    <string name="button_logout">Выйти</string>
    <string name="telegram_hint">Telegram пример:@Meridiane09</string>
    <string name="password_re_hint">Повторите пароль</string>
    <string name="error_text">Ошибка %s()</string>
    <string name="load_error">Ошибка загрузки</string>
    <string name="try_again">Повторить</string>
    <string name="toolbar_student">Ученики</string>
    <string name="toolbar_profile">Профиль</string>
    <string name="toolbar_calendar">Занятия</string>
    <string name="toolbar_question">Опросы</string>
    <string name="add_student">Добавить</string>
    <string name="add_name_hint">Имя Фамилия Отчество</string>
    <string name="add_teacher_hint">id учителя,номер из профиля</string>
    <string name="add_address_hint">Адрес</string>
    <string name="add_phone_hint">Телефон</string>
    <string name="textTittleDialog">Добавить нового ученика</string>
    <string name="textTittleDialogQuestion">Добавить новый опрос</string>
    <string name="add_tittle_question_hint">Заголовок опроса</string>
    <string name="add_tittle_lesson_hint">Заголовок занятия</string>
    <string name="text_link_question">Добавить ссылку на опрос</string>
    <string name="text_calendar_list">Прошлые занятия</string>
    <string name="text_calendar_future_list">Предстоящие занятия</string>
    <string name="text_future_lesson">Предстоящие занятия: %d</string>
    <string name="text_old_lesson">Прошедшие занятия: %d</string>
    <string name="text_email">Email: %d</string>
    <string name="text_telegram">Telegram: %d</string>
    <string name="text_data">%d %d %d</string>
    <string name="add_question">Готово</string>
    <string name="button_statistic">Статистика</string>
    <string name="text_like">Оценить занятие</string>
    <string name="textTittleDialogLesson">Создать новое занятие</string>
    <string name="teht_hint_lesson">Начало</string>
    <string name="text_hint_lesson_last">Конец</string>
    <string name="text_time">Время:</string>
    <string name="text_date">Дата</string>
    <string name="add_tittle_lesson_description_hint">Описание занятия</string>
    <string name="add_image_hint">Можно добавить ссылку на фото</string>
</resources>