<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:background="@drawable/dialog"
        android:backgroundTint="@color/purple_700"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="32dp"
                android:hint="@string/add_tittle_lesson_description_hint"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layoutLinkAdd">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textDescriptionLesson"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="textUri" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textDate"
                style="@style/TextAppearance.H2Profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/text_date"
                app:layout_constraintEnd_toEndOf="@+id/textTittleDialog"
                app:layout_constraintStart_toStartOf="@+id/textTittleDialog"
                app:layout_constraintTop_toBottomOf="@+id/textTittleDialog" />

            <TextView
                android:id="@+id/textTime"
                style="@style/TextAppearance.H2Profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_time"
                app:layout_constraintBottom_toBottomOf="@+id/layoutTittleQuestion"
                app:layout_constraintEnd_toStartOf="@+id/layoutTittleQuestion"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/layoutTittleQuestion" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutTittleLessonLast"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:hint="@string/text_hint_lesson_last"
                app:layout_constraintBottom_toTopOf="@+id/layoutLinkAdd"
                app:layout_constraintEnd_toEndOf="@+id/layoutLinkAdd"
                app:layout_constraintTop_toBottomOf="@+id/textDate">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextLessonLast"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="datetime" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textTittleDialog"
                style="@style/TextAppearance.H2Profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/textTittleDialogLesson"
                app:layout_constraintBottom_toTopOf="@+id/layoutTittleQuestion"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutLinkAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/add_tittle_lesson_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layoutTittleLessonLast">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textLinkAdd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="textUri" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutTittleQuestion"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="16dp"
                android:hint="@string/teht_hint_lesson"
                app:layout_constraintBottom_toTopOf="@+id/layoutLinkAdd"
                app:layout_constraintEnd_toStartOf="@+id/layoutTittleLessonLast">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextQuestion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="datetime" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_add_lesson"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_question"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>